<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MM斗地主</string>
    <!-- login -->
    <string name="login_error">您的登录密码错误</string>
    <string name="login_exist">帐号不存在</string>
    <string name="login_password_verify">密码应为6至18位的数字或英文组合</string>
    <string name="login_change_success">帐号切换成功</string>
    <string name="login_same_account">不能登录相同帐号</string>
    <!-- modifyPsd -->
    <string name="modifyPsd_diff_psd">输入的两次密码不相同</string>
    <string name="modifyPsd_fail">原始密码错误</string>
    <string name="modifyPsd_success">密码修改成功</string>
    <!-- register -->
    <string name="email">用户名称</string>
    <string name="input_email">gxxxx.</string>
    <string name="email_error">您输入了一个无效的邮箱地址呢</string>
    <string name="email_exist">您输入的邮箱已被注册啦</string>
    <string name="password">密\u3000\u3000码</string>
    <string name="input_password">请输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_verify">密码应为6至18位的数字或英文组合</string>
    <string name="input_confirm_password">请输入确认密码</string>
    <string name="psd_not_equal_con_psd">您两次输入的密码不一样哦</string>
    <string name="nick_name">昵\u3000\u3000称</string>
    <string name="nick_name_exist">您输入的昵称已被注册啦</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="sex">性\u3000\u3000别</string>
    <string name="regist_fail">注册失败</string>
    <string name="regist_success">注册成功</string>
    <string name="nick_name_too_long">昵称的宽度已超过8个汉字的宽度啦</string>
    <string name="nick_name_registed">昵称已被注册</string>
    <string name="password_no_less_than">密码不能小于%d位</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="register_apply">完成注册</string>
    <string name="bound_mobile_reward">完成注册获得奖励：100</string>
    <string name="unknow_error">噢！出错咯。</string>
    <string name="default_nickname">游客</string>
    <!-- netStartActivity -->
    <string name="content">主人,快来一起\n联网斗地主吧</string>
    <string name="account">帐号:</string>
    <string name="psd">密码:</string>
    <string name="commit">登录</string>
    <string name="ok">确定</string>
    <string name="input_old_psd">请输入原密码:</string>
    <string name="input_new_psd">请输入新密码:</string>
    <string name="getback_psd">密码找回</string>
    <string name="change_psd">密码修改</string>
    <string name="success_psd">密码修改成功</string>
    <string name="rechage_type">请选择充值类型</string>
    <string name="about">【游戏名称】\n
MM斗地主\n
\n
【版本号】\n
V%s\n
\n
【发行商】\n
华友世纪通讯有限公司\n
\n
【客服电话】\n
400-700-5825\n
\n
【开发组】\n
出品人：姜义丹\n
服务器：何一舟，庄志勇，徐鸿斌\n
客户端：林欣，李恒旭，翟伟利\n
美术：LALN，余波\n
策划：紫河暮\n
【商务合作】\n
李瑛
88695391
liying@hurray.com.cn


</string>
    <string name="help">【斗地主规则】
\n==玩家、牌面和发牌==\n
　　斗地主使用一副54张的扑克牌，包括两张王。牌面从大到小依次是：大王、小王、2、A、K、Q、J、10、9、8、7、6、5、4、3 花色是没有区别的。每个玩家持有17张牌，地主20张牌。\n
 
\n==叫牌==\n
　　叫牌按出牌的顺序轮流进行，每人只能叫一次。叫牌时可以叫 “1 分 ” ， “2 分 ” ， “3 分 ” ， ” 不叫 ” 。后叫牌者只能叫比前面玩家高的分或者不叫。每个人还有一次抢地主的机会，抢地主依次顺序，每抢一次底分*2. \n

\n==出牌==\n
　　1、单张：前面提到过，大小顺序从3(最小)到大王(最大)；\n 
　　2、一对：两张大小相同的牌，从3(最小)到2(最大)； \n
　　3、三张：三张大小相同的牌； \n
　　4、三张带一张：三张并带上任意一张牌，根据三张的大小来比较。\n
　　5、三张带一对：三张并带上一对，根据三张的大小来比较。\n
　　6、顺子：至少5张连续大小(从3到A，2和王不能用)的牌，例如8-9-10-J-Q； \n
　　7、连对：至少3个连续大小(从3到A，2和王不能用)的对子，例如10-10-J-J-Q-Q-K-K；\n 
　　8、三张的顺子：至少2个连续大小(从3到A)的三张，例如4-4-4-5-5-5； \n
　　9、三张带一张的顺子：每个三张都带上额外的一个单张，例如7-7-7-8-8-8-3-6，尽管三张2不能用，但能够带上单张2和王； \n
　　10、三张带一对的顺子：每个三张都带上额外的一对，只需要三张是连续的就行，例如8-8-8-9-9-9-4-4-J-J，尽管三张2不能用，但能够带上一对2（不能带一对王，因为两张王的大小不一样），这里要注意，三张带上的单张和一对不能是混合的，例如3-3-3-4-4-4-6-7-7就是不合法的； \n
　　11、炸弹：四张大小相同的牌，炸弹能盖过除火箭外的其他牌型，大的炸弹能盖过小的炸弹；\n 
　　12、火箭：一对王，这是最大的组合，能够盖过包括炸弹在内的任何牌型； \n
　　13、四张套路(四带二)：有两种牌型，一个四张带上两个单张，例如6-6-6-6-8-9，或一个四张带上两对，例如J-J-J-J-9-9-Q-Q，四带二只根据四张的大小来比较，只能盖过比自己小的同样牌型的四带二（四张带二张和四张带二对属于不同的牌型，不能彼此盖过），不能盖过其他牌型，四带二能被比自己小的炸弹盖过。\n
 
\n==牌型==\n
　　火箭：即双王（大王和小王），最大的牌。\n 
　　炸弹：四张同数值牌。 \n
　　单牌：单个牌。 \n
　　对牌：数值相同的两张牌。 \n
　　三张牌：数值相同的三张牌。 \n
　　三带一：数值相同的三张牌 + 一张单牌或一对牌。 \n
　　单顺：五张或更多的连续单牌。不包括 2 点和双王。 \n
　　双顺：三对或更多的连续对牌。不包括 2 点和双王。 \n
　　飞机：二个或更多的连续三张牌。不包括 2 点和双王。 \n
　　飞机带翅膀：三顺+同数量的单牌（或同数量的对牌）。 \n
　　四带二：四张牌+两手牌。（注意：四带二不是炸弹）。 \n

\n==牌型的大小==\n
　　火箭最大，可以打任意其他的牌。 \n
　　炸弹比火箭小，比其他牌大。都是炸弹时按牌的分值比大小。 \n
　　除火箭和炸弹外，其他牌必须要牌型相同且总张数相同才能比大小。相同牌型按牌的分值比大小。 \n
　　依次是 大王 > 小王  > 2 > A > K > Q > J > 10 > 9 > 8 > 7 > 6 > 5 > 4 > 3 ，不分花色。 \n
　　顺牌按最大的一张牌的分值来比大小。 \n
　　飞机带翅膀和四带二按其中的三顺和四张部分来比，带的牌不影响大小。 \n
　　1.底分：叫牌的底分 \n
　　2.每出一个炸弹或火箭，翻一倍 \n
　　3.地主胜：地主得分为2×底分×倍数。 其余用户各得：-底分×倍数 \n
　　4.地主败：地主得分为-2×底分×倍数。 其余用户各得：底分×倍数 \n
　　5.地主所有牌出完，其他两家一张都未出： 分数 × 2 \n
　　6.其他两家中有一家先出完牌，地主只出过一手牌： 分数 × 2 \n
　 
\n&lt;夜店美女斗地主.单机版特别说明>\n
 
　　&lt;夜店美女斗地主>单机版本中，将有四位性格各异的美女陪伴玩家完成斗地主游戏。每个美女都有不同的出牌风格、独特的语言和表情。\n
　　单机版本特别设计了可以更换的打牌场景、牌面、美女；玩家需要完成特定的成就开启&lt;美女的私藏>部分获得。在单机版本中，玩家打出特殊牌型还可以获得加分，完成的高分可以计入排行榜中。\n

\n&lt;夜店美女斗地主.联网版特别说明>\n
　　&lt;夜店美女斗地主>联网版本中，玩家可以和万千在线网友共同体验斗地主的乐趣。通过斗地主游戏，玩家可以获得金币、经验和红桃。金币和红桃可以用来购买丰富的游戏道具和装扮，帮助玩家随意塑造自己的游戏形象。\n

　　在联网版本中，还有丰富的成就，完成成就、挑战排行榜第一名，还可以获得特殊的称号哦。</string>
    <!-- user -->
    <string name="nickname">昵称：</string>
    <string name="tv_nickname">小白兔</string>
    <string name="signature">签名：</string>
    <string name="et_signature">编辑个性签名</string>
    <string name="players_status_idle">（空闲）</string>
    <string name="players_status_fighting">（战斗）</string>
    <string name="players_status_offline">（离线）</string>
    <string name="btn_return">返回</string>
    <!-- landlord -->
    <string name="tv_clothes_success">形象保存成功</string>
    <string name="tips_goods_should_select">请选择一件物品再保存形象</string>
    
    <string name="tv_challenge_status">快开挑战赛（200人在线）</string>
    <string name="tv_compete_for_gold_status">6人夺金赛（200人在线）</string>
    <string name="tv_compete_for_prepaid_card_status">充值卡争夺赛（200人在线）</string>
    <string name="btn_apply">报名</string>
    <string name="tv_challenge_have_applied">已报名</string>
    <string name="tv_compete_for_gold_have_applied">已报名</string>
    <string name="tv_compete_for_prepaid_card_have_applied">已报名</string>
    <!-- Personal Information -->
    <string name="user_level">级别 :</string>
    <string name="user_gender">性别 :</string>
    <string name="user_record">战绩 :</string>
    <string name="user_sheng">胜</string>
    <string name="user_fu">负</string>
    <string name="user_gold">金币 :</string>
    <string name="user_ingot">元宝 :</string>
    <string name="user_hong_tao">红桃 :</string>
    <string name="user_integral">积分 :</string>
    <string name="user_state">状态 :</string>
    <string name="user_title">头衔 :</string>
      <string name="user_id">用户名 :</string>
    <string-array name="information_array">
        <item>级别：</item>
        <item>性别：</item>
        <item>战绩：</item>
        <item>金币：</item>
        <item>元宝：</item>
        <item>积分：</item>
        <item>状态：</item>
        <item>头衔：</item>
    </string-array>
    <string name="achievement">成就</string>
    <!-- friends information -->
    <string name="friends_name">小白兔</string>
    <string name="btn_delete">删除</string>
    <!-- top -->
    <string name="top_level">等级排行榜</string>
    <string name="top_wealth">财富排行榜</string>
    <string name="rank">排名</string>
    <string name="wealth">金币</string>
    <string name="level">等级</string>
    <string name="player">玩家</string>
    <string name="alert_dialog_text_entry">您已进入排行榜，请留下尊姓大名</string>
    <!-- tab -->
    <string name="landlord">斗地主</string>
    <string name="indivigualcenters">个人中心</string>
    <string name="friends">好友</string>
    <string name="recharge">充值</string>
    <string name="top">排行榜</string>
    <string name="got_it">知道了</string>
    <string name="victory">胜</string>
    <string name="failure">负</string>
    <string name="cardnum">剩%d</string>
    <string name="bottompoints">底分%d</string>
    <!-- game -->
    <string name="vol">音量</string>
    <string name="deposit">托管</string>
    <string name="face">表情</string>
    <string name="speak">发言</string>
    <string name="name">名字</string>
    <string name="playahand">出牌</string>
    <string name="prompt">提示</string>
    <string name="pass">不要</string>
    <string name="yifen">1分</string>
    <string name="erfen">2分</string>
    <string name="sanfen">3分</string>
    <string name="user_name">用户名</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码了</string>
    <string name="pls_input_user_name">请输入用户名</string>
    <string name="user_name_too_long">用户名太长</string>
    <string name="login_fail">登录失败</string>
    <string name="user_name_registed">用户名已被注册</string>
    <string name="pls_wait">请求中，请稍等</string>
    <string name="game_offline">游戏掉线</string>
    <string name="cannot_connect_to_srv">无法联接到服务器</string>
    <string name="delcare_num">底分：%d</string>
    <string name="rate">倍数：%d</string>
    <string name="buyao">不要</string>
    <string name="soundeff">音效</string>
    <string name="volume">音量</string>
    <string name="silence">静音</string>
    <string name="beauty_one_name">珍妮</string>
    <string name="beauty_two_name">艾莉</string>
    <string name="beauty_three_name">小曼</string>
    <string name="beauty_fourth_name">安娜</string>
    <string name="bu_yao">不要</string>
    <string name="yao_bu_qi">要不起</string>
    <string name="fen">分</string>
    <string name="bu_jiao">不叫</string>
    <string name="alert_dialog_ok">确认</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="left_game_num">剩余%d局</string>
    <string name="win_win_num" formatted="false">胜%d负%d,连胜%d局</string>
    <string name="beauty1_name">珍妮</string>
    <string name="beauty2_name">艾莉</string>
    <string name="beauty3_name">小曼</string>
    <string name="beauty4_name">安娜</string>
    <string name="rob_lord">抢地主</string>
    <string name="rob_giveup">不抢</string>
    <string name="is_sdcard">您没有SD卡或者SD卡空间不足！\n请保证SD卡可用后继续</string>
    <string name="sign_in_ongoing">你正在比赛中\n若此时退出比赛\n你的比赛将进入托管状态\n在此期间\n你无法报名其他比赛。\n是否继续？</string>
    <string name="incompelete_payment">积分（红桃  金币）不足</string>
    <string name="tips_confirm_purchase">确定要购买吗?</string>
    <string name="tips_purchase_success">购买成功</string>
    <string name="sign_in_failed">报名失败</string>
    <string name="waiting_room">报名成功，等待分配房间\n剩余%d秒</string>
    <string name="auth_error">账号信息过时，请重新登录</string>
    <string name="server_error">网络有问题</string>
    <string name="room_info_illegal">房间信息不合法</string>
    <string name="no_tips_available">没有手牌能大过上家</string>
    <string name="debug_timeout">10000</string>
    <string name="gold">金币</string>
    <string name="point">积分</string>
    <string name="exp">经验</string>
    <string name="btn_game_detail">详细赛制</string>
    <string name="btn_cancel_sign_in">取消报名</string>
    <string name="tips_unsurppot">暂不开放此功能</string>
</resources>