<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="240dp" android:layout_height="wrap_content"
	android:layout_gravity="center" android:background="@drawable/shape_bg">
	<!-- <ImageView android:id="@+id/regist_bg" android:layout_centerInParent="true" 
		android:layout_width="240dp" android:layout_height="wrap_content" android:layout_marginTop="7dp" 
		android:src="@drawable/bg_regist_activity" /> <Button android:id="@+id/online_register_btn_back" 
		android:layout_width="wrap_content" android:layout_height="wrap_content" 
		android:layout_alignRight="@id/regist_bg" android:layout_alignTop="@id/regist_bg" 
		android:layout_marginRight="-35dp" android:layout_marginTop="-7dp" android:background="@drawable/btn_close" 
		/> -->
	<Button android:id="@+id/online_register_back"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:background="@drawable/shape_back"
		android:layout_marginTop="4dp"
		android:layout_marginRight="4dp"
		android:layout_alignParentRight="true"/>
	<LinearLayout android:id="@+id/tablelayout_regist"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_centerHorizontal="true" android:layout_marginTop="40dp"
		android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
		android:orientation="vertical">
		<!-- <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" 
			android:orientation="horizontal" > <TextView android:layout_width="wrap_content" 
			android:layout_height="wrap_content" android:padding="2dp" android:text="@string/email" 
			android:textColor="@android:color/white" android:textSize="16sp" /> <EditText 
			android:id="@+id/et_email" android:layout_width="0dp" android:layout_height="wrap_content" 
			android:layout_weight="1" android:background="@android:drawable/editbox_background_normal" 
			android:completionThreshold="1" android:hint="@string/input_email" android:singleLine="true" 
			android:textColorHint="@android:color/darker_gray" android:textSize="16sp" 
			/> </LinearLayout> -->
		<LinearLayout android:layout_width="wrap_content"
			android:layout_gravity="center" android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:padding="2dp"
				android:text="@string/nick_name" android:textColor="@android:color/white"
				android:textSize="16sp" />
			<EditText android:id="@+id/et_nickname"
				android:layout_width="0dp" android:layout_height="wrap_content"
				android:layout_weight="1" android:background="@android:drawable/editbox_background_normal"
				android:hint="@string/input_nickname" android:inputType="textPersonName"
				android:textColorHint="@android:color/darker_gray" android:textSize="16sp" />
		</LinearLayout>
		<!-- <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:orientation="horizontal" > <TextView android:layout_width="wrap_content" 
			android:layout_height="wrap_content" android:padding="2dp" android:text="@string/confirm_password" 
			android:textColor="@android:color/white" android:textSize="16sp" /> <EditText 
			android:id="@+id/et_confirm_password" android:layout_width="0dp" android:layout_height="wrap_content" 
			android:layout_weight="1" android:background="@android:drawable/editbox_background_normal" 
			android:hint="@string/input_confirm_password" android:inputType="textPassword" 
			android:textColorHint="@android:color/darker_gray" android:textSize="16sp" 
			/> </LinearLayout> -->
		<LinearLayout android:layout_width="wrap_content"
			android:layout_gravity="center" android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:padding="2dp"
				android:text="@string/password" android:textColor="@android:color/white"
				android:textSize="16sp" />
			<EditText android:id="@+id/et_password"
				android:layout_width="0dp" android:layout_height="wrap_content"
				android:layout_weight="1" android:background="@android:drawable/editbox_background_normal"
				android:hint="@string/input_password" android:inputType="textPassword"
				android:textColorHint="@android:color/darker_gray" android:textSize="16sp" />
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
			android:layout_gravity="center" android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center_vertical"
				android:padding="2dp" android:text="@string/sex" android:textColor="@android:color/white"
				android:textSize="16sp" />
			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:orientation="horizontal">
				<CheckBox android:id="@+id/cb_male" style="@style/check_box"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="5dp" android:text="@string/male" android:textColor="@android:color/white"
					android:textSize="16sp" />
				<CheckBox android:id="@+id/cb_female" style="@style/check_box"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="10dp" android:text="@string/female"
					android:textColor="@android:color/white" android:textSize="16sp" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<Button android:id="@+id/btn_regist" android:layout_width="120dp"
		android:layout_height="60dp" android:layout_below="@id/tablelayout_regist"
		android:layout_centerHorizontal="true" android:layout_marginTop="2dp"
		android:background="@drawable/net_btn" android:gravity="center"
		android:text="@string/register_apply" android:textColor="@android:color/white"
		android:textStyle="italic" android:textSize="18sp" />
	<TextView android:id="@+id/tv_mobile_reward"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@id/btn_regist" android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp" android:drawableRight="@drawable/icon_money"
		android:text="@string/bound_mobile_reward" android:textColor="@android:color/white" />
	<TextView android:layout_below="@id/tv_mobile_reward"
		android:layout_width="wrap_content" android:layout_height="20dp" />
</RelativeLayout>