<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp" android:layout_height="180dp"
    android:layout_gravity="center" 
    android:background="@drawable/shape_bg">

    <TextView android:id="@+id/tips_incompelete_payment" 
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" 
        android:layout_marginTop="50dp"
        android:gravity="center" android:text="@string/incompelete_payment"
        android:textColor="@android:color/white" android:textSize="18sp" />
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tips_incompelete_payment"
	    android:layout_marginTop="20dp"
	    android:layout_centerInParent="true">
	    <Button android:id="@+id/btn_ok"
	        android:layout_width="110dp"
	        android:layout_height="50dp"
	        android:background="@drawable/net_btn" 
	        android:text="@string/ok"
        	android:textSize="16sp"
	        android:textColor="@android:color/white" />
	     <Button android:id="@+id/btn_recharge"
	        android:layout_width="110dp" 
	        android:layout_height="50dp"
	        android:background="@drawable/net_btn" 
	        android:text="@string/recharge"
        	android:textSize="16sp"
	        android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>